src/objects/BT_CO_VBS_CreditDebit__c.object
<CustomObject>
    <description>Vendor Credit / Debit data for VBS - by Vendor by Pub by Date</description>
    <fields>
        <fullName>Amt_Before_GST__c</fullName>
        <label>Amount Before GST</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Debit__c</fullName>
        <description>Credit/Debit Indicator</description>
        <label>Credit/Debit Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GST_Amount__c</fullName>
        <label>GST Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Number__c</fullName>
        <label>Credit / Debit Note Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <description>Posting Date. For Monthly Data, it is the Last Day of the Month</description>
        <label>Posting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isJobProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>implementing the logic for missing records by updating check box. File will not pick up once check box checked.</description>
        <label>isJobProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>BT_CO_VBS_CreditDebit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Posting_Date__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_Verification</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Number__c</field>
            <operation>equals</operation>
            <value>0523F</value>
        </filters>
        <label>For Verification</label>
    </listViews>
    <listViews>
        <fullName>Reason_Code_24</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_Code__c</field>
            <operation>equals</operation>
            <value>24</value>
        </filters>
        <label>Reason Code - 24</label>
    </listViews>
    <listViews>
        <fullName>Reason_Code_C</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_Code__c</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>Reason Code - C</label>
    </listViews>
    <listViews>
        <fullName>Reason_Code_D3</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_Code__c</field>
            <operation>equals</operation>
            <value>D3</value>
        </filters>
        <label>Reason Code - D3</label>
    </listViews>
    <listViews>
        <fullName>Reason_Code_I</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_Code__c</field>
            <operation>equals</operation>
            <value>I</value>
        </filters>
        <label>Reason Code - I</label>
    </listViews>
    <listViews>
        <fullName>Reason_Code_M</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_Code__c</field>
            <operation>equals</operation>
            <value>01,02,03,04</value>
        </filters>
        <label>Reason Code - Manual</label>
    </listViews>
    <listViews>
        <fullName>Reason_Code_P</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_Code__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>Reason Code - P</label>
    </listViews>
    <listViews>
        <fullName>ehview</fullName>
        <columns>NAME</columns>
        <columns>Amt_Before_GST__c</columns>
        <columns>Credit_Debit__c</columns>
        <columns>Note_Number__c</columns>
        <columns>GST_Amount__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Posting_Date__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/22/2016 12:00 AM</value>
        </filters>
        <label>ehview</label>
    </listViews>
    <nameField>
        <displayFormat>VBS-{YYMM}-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT_CO_VBS_CreditDebits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>